@@ -25,7 +25,6 @@ The following features of the |k8s-op-full| and the underlying |k8s|
 clusters are not available in the beta release of the |multi-clusters|:
 
 - Sharded cluster deployments
-- LDAP authentication
 - |onprem| version earlier than 5.0.7
 
 .. _multi-cluster-capabilities:
@@ -55,10 +54,11 @@ documentation in this guide.
        and select the tab :guilabel:`Using the Kubernetes Secret`.
 
    * - Secure database users in |multi-clusters|
-     - Use these procedures:
+     - Manage database users using:
 
-       - :ref:`Configure database users with SCRAM authentication <k8s-manage-db-users-scram>`
-       - :ref:`Manage database users in deployments that use TLS and X.509 for internal cluster authentication <k8s-manage-db-users-x509>`
+       - :ref:`LDAP authentication <k8s-manage-db-users-ldap>`
+       - :ref:`SCRAM authentication <k8s-manage-db-users-scram>`
+       - :ref:`TLS and X.509 for internal cluster authentication <k8s-manage-db-users-x509>`
        
        These procedures are the same as for single clusters
        deployed with |k8s-op-short|, with the following exceptions:
