@@ -17,11 +17,10 @@ Secure Database Resources in Multi-Cluster Deployments
 :ref:`multi-cluster-secure-tls`
   Secure ``MongoDBMulti`` CustomResources with |tls|.
 
-:ref:`multi-cluster-secure-x509`
-  Configure x.509 for client authentication in |multi-clusters|.
+:ref:`multi-cluster-secure-client-connections`
+  Configure |ldap| and X.509 for client authentication and X.509 for
+  internal authentication in your |multi-clusters|.
 
-:ref:`multi-cluster-secure-internal-auth`
-  Configure |tls| and X.509 for internal authentication in |multi-clusters|.
 
 .. class:: hidden
 
@@ -29,5 +28,4 @@ Secure Database Resources in Multi-Cluster Deployments
       :titlesonly:
 
       /tutorial/multi-cluster-secure-tls
-      /tutorial/multi-cluster-secure-x509
-      /tutorial/multi-cluster-secure-internal-auth
+      /tutorial/multi-cluster-secure-client-connections
