@@ -16,43 +16,19 @@ Secure Client Authentication with LDAP
    :depth: 2
    :class: singlecol
 
-`MongoDB Enterprise
-<http://www.mongodb.com/products/mongodb-enterprise?jmp=docs>`_
-supports proxying authentication requests to a Lightweight Directory
-Access Protocol (LDAP) service.
+.. include:: /includes/facts/ldap-intro.rst
 
 You can use the |k8s-op-short| to configure LDAP to authenticate your
 client applications that connect to your MongoDB deployments. This guide
-guide describes how to configure LDAP authentication from client
-applications to your MongoDB deployments.
+describes how to configure LDAP authentication from client applications
+to your MongoDB deployments.
 
 .. include:: /includes/admonitions/cannot-secure-standalone.rst
 
 Considerations
 --------------
 
-- Support for LDAP binding types. MongoDB Enterprise supports simple and
-  SASL binding to Lightweight Directory Access Protocol (LDAP) servers.
-  MongoDB Enterprise can bind to an LDAP server via ``saslauthd`` or
-  through the operating system libraries. To learn more,
-  see the :manual:`LDAP Proxy Authentication </core/security-ldap>` and
-  :manual:`LDAP Authorization </core/security-ldap-external>` sections
-  in the MongoDB Server documentation.
-
-- Ways of configuring LDAP in |k8s-crds|. To configure LDAP in the
-  |k8s-op-short|, use the parameters under the
-  :setting:`spec.security.authentication.ldap` and 
-  with other :ref:`security LDAP settings <security-settings>` specific
-  to the Agent, from the |k8s-op-short| MongoDB resource specification.
-  The procedures in this section describe the required settings and
-  provide examples of LDAP configuration.
-
-- Consider :ref:`configuring TLS <secure-tls>`. Encryption with |tls| is
-  optional. By default, |ldap| traffic is sent as plain text. This means
-  that username and password are exposed to network threats. Many modern
-  directory services, such as Microsoft Active Directory, require
-  encrypted connections. Consider using |ldap| over |tls-ssl| to encrypt
-  authentication requests in your |k8s-op-short| MongoDB deployments.
+.. include:: /includes/facts/ldap-considerations.rst
 
 General Prerequisites
 ---------------------
